tests/ui/fail/expr-tuple.stderr
error: Potentially invalid expansion. Expected an expression, an identifier, `::`, `<`, `Self`, `break` or 13 others.
 --> tests/ui/fail/expr-tuple.rs:6:10
  |
6 |         (,)
  |          ^

error: Potentially invalid expansion. Expected an expression, an identifier, `::`, `<`, `Self`, `break` or 13 others.
  --> tests/ui/fail/expr-tuple.rs:13:13
   |
13 |         (42,, 42)
   |             ^

error: Potentially invalid expansion. Expected `!=`, `%`, `&&`, `&`, `*`, `+` or 20 others.
  --> tests/ui/fail/expr-tuple.rs:20:12
   |
20 |         (a b)
   |            ^
